# SURD

./: .gitignore  .markdownlint.jsonc  README.md  hello.py  pyproject.toml
examples/: E01_logic_gates.ipynb  E02_building_blocks.ipynb
src/: surd.py
src/surd/: surd.py
src/surd/utils/: analytic_eqs.py  it_tools.py
src/utils/: it_tools.py  transport_map.py
utils/: analytic_eqs.py  surd.py
